<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TableLayout android:id="@+id/tableLayout1" android:layout_height="match_parent" android:layout_width="wrap_content">
        <EditText android:text="@string/defult_url" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/txtURL"></EditText>
        <EditText android:id="@+id/txtProgress" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/status" android:editable="false"></EditText>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/cmdDownload" android:text="@string/download"></Button>
        <ListView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/listModels"></ListView>
    </TableLayout>
</LinearLayout>
