<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TableLayout android:id="@+id/tableLayout1" android:layout_height="match_parent" android:layout_width="wrap_content">
        <Button android:text="@string/deleteAllModels" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/cmdDeleteAllModels"></Button>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_log" android:id="@+id/cmdShowLog"></Button>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/cmdDeleteLog" android:text="@string/deleteLog"></Button>
        <ListView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/listModels"></ListView>
        <EditText android:maxLines="10" android:text="EditText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtOutput"></EditText>
    </TableLayout>
</LinearLayout>
